--- a/static/fonts/custom-icons.css
+++ b/static/fonts/custom-icons.css
@@ -1,7 +1,7 @@
 @font-face {
     font-family: "custom-icons";
-    src: url("/static/fonts/custom-icons.woff2?da8444ddaa9caa40fb3cd633cc8de05c") format("woff2"),
-url("/static/fonts/custom-icons.woff?da8444ddaa9caa40fb3cd633cc8de05c") format("woff");
+    src: url("https://niallxd.github.io/ecoscapes-maps/static/fonts/custom-icons.woff2?da8444ddaa9caa40fb3cd633cc8de05c") format("woff2"),
+url("https://niallxd.github.io/ecoscapes-maps/static/fonts/custom-icons.woff?da8444ddaa9caa40fb3cd633cc8de05c") format("woff");
 }
 
 .icon:before {
