--- a/templates/mapviewer/map.html
+++ b/templates/mapviewer/map.html
@@ -60,11 +60,8 @@
           max-width: 100%;
           overflow-x: hidden;
           overflow-y: auto;
-          padding-right: 10px;
-          transition: transform 0.2s ease-in-out;
           will-change: transform;
           position: relative;
-          background: white;
           z-index: 2;
           height: 100%;
         }
@@ -72,6 +69,7 @@
         /* When collapsed, slide the info column out of view */
         .two-column.collapsed {
           grid-template-columns: 0 1fr; /* Use 1fr to take remaining space */
+          gap: 0px;
         }
 
         .two-column.collapsed .info-column {
@@ -85,7 +83,6 @@
           width: 100%;
           height: 100%;
           min-width: 0; /* Allows the map to shrink below its content size */
-          transition: margin-left 0.3s ease-in-out;
           overflow: hidden; /* Prevent any content from overflowing */
         }
         
@@ -346,7 +343,8 @@
             align-items: center;
             flex-wrap: wrap;
             gap: 15px;
-            margin-bottom: 20px;
+            margin-bottom: 10px;
+            margin-left: 10px;
             padding: 15px 20px;
             box-shadow: 0 2px 6px rgba(0,0,0,0.05);
             background-color: #ffffff;
@@ -375,7 +373,7 @@
             background: white;
             border-radius: 20px;
             padding: 20px;
-            box-shadow: 0 2px 6px rgba(0,0,0,0.05);
+            box-shadow: 0 4px 12px rgba(0,0,0,0.1);
             box-sizing: border-box;
         }
 
@@ -383,6 +381,11 @@
           display: flex;
           flex-direction: column;
           gap: 20px; /* space between cards */
+          padding: 10px;
+        }
+
+        .map-column {
+          padding: 10px;
         }
 
 
@@ -532,6 +535,7 @@
             height: 100%;
             border-radius: 8px;
             overflow: hidden;
+            border-radius: 20px;
             box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
         }
         
@@ -874,7 +878,6 @@
             height: 100%;
             border: none;
             opacity: 0;
-            transition: opacity 0.3s ease;
             pointer-events: none;
         }
 
