--- a/templates/mapviewer/map.html
+++ b/templates/mapviewer/map.html
@@ -368,6 +368,28 @@
 
         .map-column {
           padding: 10px;
+          min-width: 0;
+          width: 100%;
+          height: 100%;
+          box-sizing: border-box;
+          overflow: hidden; /* Prevent map from overflowing */
+        }
+        
+        .map-container {
+          width: 100%;
+          height: 100%;
+          position: relative;
+          overflow: hidden;
+          box-sizing: border-box;
+          padding: 0;
+          margin: 0;
+        }
+        
+        .map-iframe {
+          width: 100%;
+          height: 100%;
+          border: none;
+          box-sizing: border-box;
         }
 
 
