--- a/templates/mapviewer/map.html
+++ b/templates/mapviewer/map.html
@@ -512,7 +512,8 @@
 
         /* Hover Effects */
         .indicator-info:hover .indicator-icon,
-        .theme-info:hover .theme-icon {
+        .theme-info:hover .theme-icon,
+        .subtheme-info:hover .subtheme-icon {
             opacity: 1;
             transform: translateY(-1px);
         }
